--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ sentence=An enhanced version of StandardFirmata version 2.5.8
 paragraph=FirmataExpress utilizes a serial baudrate of 115200. In addition it adds support for Tone, DHT humidity/temperature sensors, stepper motors, HC-SR-04 distance sensor, advanced auto-discovery of connected Arduino boards, and a watchdog timer.
 category=Device Control
 url=https://github.com/MrYsLab/FirmataExpress
-depends=Ultrasonic
+depends=Ultrasonic, DHTStable
 architectures=*
 
